# engine_v2

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  LICENSE  codestyle.md
engine/: CMakeLists.txt  CMakePresets.json
engine/cmake/: clang_tidy.cmake  compile_options.cmake  cppcheck.cmake  format_all.cmake
engine/cmake/tools/: format_all_command.cmake
engine/entry_point/: CMakeLists.txt
engine/entry_point/src/: entry_point.cpp
engine/include/engine/: engine.hpp  event_system.hpp  game.hpp  game_settings.hpp  resource.hpp  resource_handler.hpp  resource_id.hpp  resource_manager.hpp  window_events.hpp
engine/include/engine/details/: event_system_details.inl  hash_helpers.hpp
engine/include/engine/event_system/: event_system.hpp
engine/include/engine/events/: event_system.hpp  window_events.hpp
engine/include/engine/graphics/: material.hpp  mesh.hpp  mesh_data.hpp  model_loader.hpp  property.hpp  renderer.hpp  shader.hpp  texture.hpp  vertex_traits.hpp
engine/include/engine/input/: keyboard.hpp
engine/include/engine/resource_management/: resource.hpp  resource_manager.hpp
engine/include/game_engine/: game.hpp
engine/include/game_engine/core/: engine.hpp  shader.hpp
engine/modules/: CMakeLists.txt
engine/modules/backend/: backend.cmake
engine/modules/backend/glfw/: CMakeLists.txt
engine/modules/backend/glfw/src/: backend_create.cpp  glfw_backend.cpp  glfw_backend.hpp  glfw_keyboard.hpp
engine/modules/backend/stub/: CMakeLists.txt
engine/modules/backend/stub/src/: backend_create.cpp  stub_backend.cpp  stub_backend.hpp
engine/modules/graphics/: graphics.cmake
engine/modules/graphics/opengl/: CMakeLists.txt
engine/modules/graphics/opengl/src/: graphics_create.cpp  opengl_mesh.cpp  opengl_mesh.hpp  opengl_renderer.cpp  opengl_renderer.hpp  opengl_shader.cpp  opengl_shader.hpp  opengl_texture.cpp  opengl_texture.hpp  opengl_utils.cpp  opengl_utils.hpp
engine/modules/graphics/stub/: CMakeLists.txt
engine/modules/graphics/stub/src/: graphics_create.cpp  stub_renderer.cpp  stub_renderer.hpp
engine/modules/include/modules/: input_handler.hpp  module_locator.hpp  render_context.hpp
engine/modules/include/modules/backend/: backend.hpp  backend_module.hpp
engine/modules/include/modules/graphics/: render_command.hpp  renderer.hpp  renderer_module.hpp
engine/src/: create_engine_instance.cpp  engine_impl.cpp  engine_impl.hpp  event_system.cpp  game_settings.cpp  resource_handler.cpp
engine/src/core/: create_engine_instance.cpp  engine_impl.cpp  engine_impl.hpp
engine/src/event_system/: event_system.cpp
engine/src/events/: event_dispatcher.cpp  event_dispatcher.hpp  event_system.cpp  event_system_impl.cpp  event_system_impl.hpp
engine/src/graphics/: mesh_impl.cpp  mesh_impl.hpp  render_command.hpp  render_context.hpp  render_context_impl.cpp  render_context_impl.hpp  renderer_impl.cpp  renderer_impl.hpp  shader_impl.cpp  shader_impl.hpp
engine/src/helpers/: hash_helpers.hpp
engine/src/modules/: CMakeLists.txt
engine/src/modules/backend/glfw/: CMakeLists.txt
engine/src/modules/backend/stub/: CMakeLists.txt
engine/src/modules/graphics/opengl/: CMakeLists.txt
engine/src/modules/graphics/stub/: CMakeLists.txt
engine/src/modules/include/modules/: backend.hpp  input_handler.hpp  module_factory.hpp  module_locator.hpp  module_registrar.hpp  render_context.hpp  renderer.hpp  service_locator.hpp
engine/src/modules/renderer/: renderer.cmake
engine/src/modules/renderer/opengl/: CMakeLists.txt
engine/src/resource_management/: resource.hpp  resource_id.cpp  resource_id.hpp  resource_loader.hpp  resource_manager.cpp  resource_manager.hpp  resource_manager_impl.cpp  resource_manager_impl.hpp
engine/src/resource_management/loaders/: file_funcitons.cpp  file_funcitons.hpp  material_loader.cpp  material_loader.hpp  mesh_loader.cpp  mesh_loader.hpp  obj_parser.cpp  obj_parser.hpp  shader_loader.cpp  shader_loader.hpp  texture_loader.cpp  texture_loader.hpp
engine/src/resource_management/resources/: material_resource.cpp  material_resource.hpp  mesh_resource.cpp  mesh_resource.hpp  shader_resource.cpp  shader_resource.hpp  texture_resource.cpp  texture_resource.hpp
engine/tests/: tests.cmake
engine/tests/core/: CMakeLists.txt  main.cpp
engine/tests/engine/: CMakeLists.txt  tests_engine_impl.cpp  tests_event_system.cpp  tests_resource_id.cpp
engine/tests/events/: CMakeLists.txt  tests_event_system.cpp
entry_point/: CMakeLists.txt
entry_point/src/: entry_point.cpp
game/: CMakeLists.txt
game/data/shaders/: simple.frag  simple.vert
game/src/: create_game_instance.cpp  game.cpp  game.hpp  game_create.cpp
src/backend/: CMakeLists.txt  backend.cpp  backend.hpp
src/backend/glad/: CMakeLists.txt
src/backend/glfw/: CMakeLists.txt  entry_point.cpp  glfw_backend.cpp  glfw_backend.hpp  glfw_backend_context.cpp  glfw_backend_context.hpp  glfw_keyboard.cpp  glfw_keyboard.hpp  opengl_mesh.cpp  opengl_mesh.hpp  opengl_renderer.cpp  opengl_renderer.hpp  opengl_shader.cpp  opengl_shader.hpp  opengl_utils.cpp  opengl_utils.hpp  render_thread.cpp  render_thread.hpp
src/backend/glfw/glad/: CMakeLists.txt
src/backend/stub/: CMakeLists.txt  stub_backend.cpp  stub_backend.hpp  stub_mesh.cpp  stub_mesh.hpp  stub_shader.cpp  stub_shader.hpp
src/entry_point/: CMakeLists.txt  entry_point.cpp
src/modules/backend/: CMakeLists.txt  backend.cmake
src/modules/backend/glfw/: CMakeLists.txt
src/modules/backend/src/: backend.cpp
src/modules/backend/stub/: CMakeLists.txt  stub_backend.hpp
src/modules/renderer/: CMakeLists.txt
src/modules/renderer/opengl/: CMakeLists.txt
src/modules/renderer/stub/: CMakeLists.txt  stub_renderer.cpp
src/renderer/: CMakeLists.txt  renderer.hpp
src/renderer/opengl/: CMakeLists.txt  opengl_mesh.cpp  opengl_mesh.hpp  opengl_renderer.cpp  opengl_renderer.hpp  opengl_shader.cpp  opengl_shader.hpp
src/renderer/stub/: CMakeLists.txt  stub_mesh.cpp  stub_mesh.hpp  stub_renderer.cpp  stub_renderer.hpp  stub_shader.cpp  stub_shader.hpp
tests/core/: CMakeLists.txt  main.cpp
(+110 files in other folders)
